# Learn-Environment-Franka-Emika-Panda

./: .gitattributes  CMakeLists.txt  Doxyfile  LICENSE  README.md  package.xml  resources.qrc  rviz_plugin.xml
converter/: convert.py  converted.py  waypoints.py
developer_docs/: CONTRIBUTE.md  codebase_overview.md  define_difficulty_levels.md  define_tasks.md
developer_docs/doxygen_documentation/: Doxyfile  class_diagram.puml
developer_docs/doxygen_documentation/html/: annotated.html  classCustomListWidget-members.html  classCustomListWidget.html  classCustomListWidget__coll__graph.md5  classCustomListWidget__inherit__graph.map  classCustomListWidget__inherit__graph.md5  classExecuteFrame-members.html  classExecuteFrame.html  classExecuteFrame__coll__graph.md5  classExecuteFrame__inherit__graph.map  classExecuteFrame__inherit__graph.md5  classLearnEnvironment-members.html  classLearnEnvironment.html  classLearnEnvironment__coll__graph.map  classLearnEnvironment__coll__graph.md5  classLearnEnvironment__inherit__graph.map  classLearnEnvironment__inherit__graph.md5  classNotebookConverter-members.html  classNotebookConverter.html  classNotebookConverter__coll__graph.map  classNotebookConverter__coll__graph.md5  classNotebookConverter__inherit__graph.map  classNotebookConverter__inherit__graph.md5  classNotebookConverter_a665ba1030d993bd9e165fca123d92032_icgraph.map  classNotebookConverter_a665ba1030d993bd9e165fca123d92032_icgraph.md5  classNotebookConverter_a66b007e49cfe58d279c3ac279ced7213_icgraph.map  classNotebookConverter_a66b007e49cfe58d279c3ac279ced7213_icgraph.md5  classNotebookConverter_af64e43c667b96ba0926a715316002665_icgraph.map  classNotebookConverter_af64e43c667b96ba0926a715316002665_icgraph.md5  classProcessRunner-members.html  classProcessRunner.html  classProcessRunner__coll__graph.map  classProcessRunner__inherit__graph.map  classProcessRunner__inherit__graph.md5  classProcessRunner_a76c6897c0cf00b9034e6deb9662debbf_icgraph.map  classProcessRunner_a76c6897c0cf00b9034e6deb9662debbf_icgraph.md5  classProcessRunner_abb4be6a4283702e38a9eb7d51438efb6_icgraph.map  classProcessRunner_abb4be6a4283702e38a9eb7d51438efb6_icgraph.md5  classProcessRunner_ae42c9c4e04890fffa674e06eedf631b3_icgraph.map  classProcessRunner_ae42c9c4e04890fffa674e06eedf631b3_icgraph.md5  (+317 more)
developer_docs/doxygen_documentation/latex/: annotated.tex  classCustomListWidget.tex  classCustomListWidget__inherit__graph.md5  classExecuteFrame.tex  classExecuteFrame__coll__graph.md5  classExecuteFrame__inherit__graph.md5  classLearnEnvironment.tex  classLearnEnvironment__inherit__graph.md5  classNotebookConverter.tex  classNotebookConverter__coll__graph.md5  classNotebookConverter__inherit__graph.md5  classNotebookConverter_a665ba1030d993bd9e165fca123d92032_icgraph.md5  classNotebookConverter_a66b007e49cfe58d279c3ac279ced7213_icgraph.md5  classNotebookConverter_af64e43c667b96ba0926a715316002665_icgraph.md5  classProcessRunner.tex  classProcessRunner__coll__graph.md5  classProcessRunner_a76c6897c0cf00b9034e6deb9662debbf_icgraph.md5  classProcessRunner_abb4be6a4283702e38a9eb7d51438efb6_icgraph.md5  classProcessRunner_ae42c9c4e04890fffa674e06eedf631b3_icgraph.md5  classProcessRunner_ae69a94ddf835cec0a63fe7f4fdb61934_icgraph.md5  classQFrame.tex  classQFrame__coll__graph.md5  classQFrame__inherit__graph.md5  classQListWidget.tex  classQListWidget__inherit__graph.md5  classQObject.tex  classQObject__inherit__graph.md5  classQWidget.tex  classQWidget__inherit__graph.md5  classScriptWorker.tex  classScriptWorker__coll__graph.md5  classScriptWorker__inherit__graph.md5  classSidebar.tex  classSidebar__inherit__graph.md5  (+151 more)
docs/for_developers/: define_difficulty_levels.md  define_tasks.md  define_topics.md
include/: learn_environment.hpp
include/common/: notebook_converter.hpp
include/learn-environment/: rviz_panel.hpp
include/learn_environment/: custom_list_widget.h  custom_list_widget.hpp  execute_frame.hpp  folder_structure_constants.hpp  learn_environment.h  learn_environment.hpp  learning_plattform.h  notebook_converter.hpp  process_runner.h  process_runner.hpp  rviz_panel.hpp  script_worker.h  script_worker.hpp  sidebar.h  sidebar.hpp  subtask_item.h  subtask_item.hpp  task.h  task.hpp  task_executor.h  task_executor.hpp  task_manager.h  task_manager.hpp  task_parser.h  task_parser.hpp  task_ui.h  task_ui.hpp
include/script_execution/: script_worker.hpp  task_executor.hpp
include/task_management/: task_manager.hpp  task_parser.hpp
include/ui/: execute_frame.hpp  sidebar.hpp  subtask_item.hpp  task_ui.hpp  toast.hpp
launch/: combined_launch.launch  config.rviz  tutorial.launch  tutorial_gazebo.launch
resource/: learn_environment.ui  learn_panel.ui  learning_plattform.ui  resources.qrc
src/: custom_list_widget.cpp  execute_frame.cpp  learn_environment.cpp  learning_plattform.cpp  notebook_converter.cpp  process_runner.cpp  rviz_panel.cpp  script_worker.cpp  sidebar.cpp  subtask_item.cpp  task_executor.cpp  task_manager.cpp  task_parser.cpp  task_ui.cpp  toast.cpp
src/common/: CMakeLists.txt  notebook_converter.cpp
src/script_execution/: CMakeLists.txt  process_runner.cpp  script_worker.cpp  task_executor.cpp
src/task_management/: CMakeLists.txt  task_manager.cpp  task_parser.cpp
src/ui/: CMakeLists.txt  custom_list_widget.cpp  execute_frame.cpp  sidebar.cpp  subtask_item.cpp  task_ui.cpp  toast.cpp
task_pool/: difficulty_levels.json  reset.py  reset_robot.py  solution_template.ipynb  task_definitions.json  topic_definitions.json
task_pool/solution_scripts/: template.ipynb
tasks/: GETTING_STARTED.md  exercise_1.py  exercise_1_1.py  getting-started.md  task_definitions.json
tasks/.documentation/: after_the_tutorial.md  theoretical_introduction.md
tasks/documentation/: after_the_tutorial.md  theoretical_introduction.md
tasks/exercise_1/: exercise_1_1.ipynb  exercise_1_1.py  exercise_1_2.py  exercise_1_3.py
tasks/exercise_2/: exercise_2_1.py  exercise_2_2.py
tasks/exercise_3/: exercise_3_1.py
tasks/exercise_4/: exercise_4_1.ipynb
tasks/exercise_5/: exercise_5_1.ipynb
(+182 files in other folders)
